# Mallard

./: .c8rc.json  .gitattributes  .gitignore  .mocharc.json  .trivyignore  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  GOALS.md  README.md  codecov.yml  esbuild.mjs  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.host.json  tsconfig.json  tsconfig.webview.json
.claude/skills/: humanize-docs.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  docs.yml  e2e.yml  security.yml  server.yml
docs/: changelog.md  configuration.md  data-sources.md  getting-started.md  index.md  notifications.md  troubleshooting.md
docs/.vitepress/: config.mts
docs/guide/: cert-manager.md  configuration.md  features.md  getting-started.md  identity-tagging.md  secret-management.md  self-hosting.md  troubleshooting.md
docs/reference/: alert-rules.md  commands.md  extension-auth.md  metrics-schema.md  settings.md
media/: pricing-manifest.json
schemas/: mallard-config.schema.json
scripts/: README.md  prune-duckdb.mjs  render-assets.mjs
server/: Dockerfile  README.md  pyproject.toml
server/docker/: .env.example  Caddyfile  docker-compose.infisical.yml  docker-compose.openbao.yml  docker-compose.yml  mosquitto.conf  nginx.conf
server/docs/: architecture.md  cert-manager.md  extension-auth.md  (+6 more)
src/: config.ts  container.ts  extension.ts
webview/: api.ts  chartDiff.ts  color.ts  env.d.ts  layout.ts  lazyMount.ts  main.ts  monacoProviders.ts  monacoWorkers.ts  store.ts  theme.ts
(+527 files in other folders)
