[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mallard-server"
version = "1.0.0"
description = "Mallard BYO metric ingest server — FastAPI + InfluxDB v2 + Grafana"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "influxdb-client>=1.47",
    "pydantic-settings>=2.0",
    "slowapi>=0.1.9",
    "amqtt>=0.11",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "bandit>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/server/tests"]
pythonpath = ["src"]

[tool.bandit]
targets = ["src/server"]
exclude_dirs = ["src/server/tests"]

[tool.coverage.run]
source = ["server"]
omit = ["server/__init__.py"]
